[gd_scene load_steps=21 format=3 uid="uid://dbduawhc25w1r"]

[ext_resource type="Script" uid="uid://jebaylrrkmia" path="res://scripts/bat2.gd" id="1_sbcyh"]
[ext_resource type="Shader" uid="uid://cccw2sr8fwgb8" path="res://scenes/skeleton.gdshader" id="2_fd6lc"]
[ext_resource type="Texture2D" uid="uid://diwmg2nxbiqtd" path="res://assets/Enemies/Bat2.png" id="3_kmgoo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vnioy"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rp1f2"]
radius = 200.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v5wyi"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 32.25
initial_velocity_max = 102.15
gravity = Vector3(0, 98, 0)
scale_min = 2.0
scale_max = 2.0
color = Color(0.227451, 0.180392, 0.309804, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gstla"]
shader = ExtResource("2_fd6lc")
shader_parameter/solid_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrn6j"]
atlas = ExtResource("3_kmgoo")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbcyh"]
atlas = ExtResource("3_kmgoo")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nigxq"]
atlas = ExtResource("3_kmgoo")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_208ay"]
atlas = ExtResource("3_kmgoo")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rynco"]
atlas = ExtResource("3_kmgoo")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2x5q"]
atlas = ExtResource("3_kmgoo")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr8w6"]
atlas = ExtResource("3_kmgoo")
region = Rect2(48, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhh5e"]
atlas = ExtResource("3_kmgoo")
region = Rect2(72, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yp5k"]
atlas = ExtResource("3_kmgoo")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfi3r"]
atlas = ExtResource("3_kmgoo")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xx76"]
atlas = ExtResource("3_kmgoo")
region = Rect2(48, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_caowe"]
atlas = ExtResource("3_kmgoo")
region = Rect2(72, 64, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jn7vh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrn6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbcyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nigxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_208ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rynco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2x5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr8w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhh5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yp5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfi3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xx76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caowe")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}]

[node name="Bat" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource("1_sbcyh")

[node name="diveDelay" type="Timer" parent="."]
wait_time = 0.13
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vnioy")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_rp1f2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vnioy")

[node name="hitEffect" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GPUParticlesExplode" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.15
one_shot = true
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_v5wyi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_gstla")
sprite_frames = SubResource("SpriteFrames_jn7vh")
animation = &"idle"
autoplay = "idle"
offset = Vector2(0, -4)

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
